<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_marginTop="235dp"
        >
        <ImageView
            android:layout_width="172dp"
            android:layout_height="37dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/code_kendra_3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <!-- Email Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="17sp" />
        <!-- Email Input -->
        <EditText
            android:id="@+id/forgotEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#808080"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/input_background" />
        <TextView
            android:id="@+id/backToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:text="@string/back_to_sign_in"
            android:textColor="#DE757272"
            android:textSize="15sp"
            android:textStyle="bold" />
        <!-- Continue Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotContinueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#e65b0c"
            android:text="@string/Continue"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
