<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <ImageView
            android:layout_width="172dp"
            android:layout_height="37dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/code_kendra_3"
            android:layout_gravity="center"/>



        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_activity"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center" />

        <!-- Email Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_address"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="17sp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/forgotEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#808080"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/input_background" />

        <!-- Already Have Account Text -->
        <TextView
            android:id="@+id/backToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:text="@string/back_to_sign_in"
            android:textColor="#DE757272"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Continue Button -->
        <Button
            android:id="@+id/ForgetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#e65b0c"
            android:text="@string/Continue"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- OR Divider -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="100dp"
            android:paddingTop="10dp"
            android:text="@string/or"
            android:textColor="#DE757272"
            android:textSize="19sp"
            android:textStyle="bold" />

        <!-- Google Login -->
        <Button
            android:id="@+id/forgotGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_stroke"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:text="@string/With_google"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Facebook Login -->
        <Button
            android:id="@+id/forgotFacebookBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_stroke"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/with_facebook"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/doYouHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:text="@string/do_you_have_an_account"
            android:textColor="#DE757272"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goToSignupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:layout_marginTop="12dp"
            android:textColor="#808080"
            android:background="@drawable/forget_rounded_button"
            android:backgroundTint="@null"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
